part-2/exercise-2.01/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-ping-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-ping
  template:
    metadata:
      labels:
        app: log-ping
    spec:
      containers:
        - name: log-output
          image: lofmakim/log-output:v2.1.3
        - name: pingpong-app
          image: lofmakim/pingpong-app:v2.1
